source/blender/blentranslation/intern/blt_lang.cc
@@ -27,6 +27,8 @@
 
 #include "BKE_appdir.h"
 
+#include "IMB_thumbs.h"
+
 #include "DNA_userdef_types.h"
 
 #include "MEM_guardedalloc.h"
